
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ errno ;
 int exit (int) ;
 int perror (char*) ;

void err(char * msg)
{
 if (errno) {
  perror(msg);
  exit(1);
 }
}
